# conglude

./: .gitignore  README.md  download_data.py  embed_ligands.py  embed_proteins.py  eval.py  predict.py  process_data.py  pyproject.toml  setup_env.sh
checkpoints/best_model/: ligand_encoder_config.json  pocket_encoder.pth  pocket_encoder_config.json  protein_encoder.pth  vnegnn_config.json
configs/: eval.yaml
configs/callbacks/: default.yaml
configs/datamodule/: eval.yaml
configs/datamodule/test_datasets/: test_datasets.yaml
configs/datamodule/test_datasets/asd/: asd.yaml
configs/datamodule/test_datasets/coach420/: coach420.yaml
configs/datamodule/test_datasets/dude/: dude.yaml
configs/datamodule/test_datasets/holo4k/: holo4k.yaml
configs/debug/: default.yaml
configs/hydra/: default.yaml
configs/logger/: wb.yaml
configs/model/: conglude.yaml
configs/model/cluster/: dbscan.yaml  mean_shift.yaml
configs/model/ligand_encoder/: mlp.yaml
configs/model/lr_scheduler/: cosine_with_warmup.yaml  plateau_with_warmup.yaml
configs/model/protein_encoder/: mlp.yaml
configs/model/vnegnn/: vnegnn.yaml
configs/trainer/: default.yaml
conglude/: datamodule.py  model.py
conglude/modules/: cluster.py  mlp.py  vnegnn.py
conglude/modules/utils/: gnn_layers.py  mappings.py
conglude/utils/: collate_functions.py  common.py  constants.py  data_processing.py  graph.py  lightning.py  losses.py  lr_schedulers.py  metrics.py
data/common/scalers/: robust_scaler_descriptors.pkl  robust_scaler_ecfp4_2048.pkl
data/datasets/common/ccd/processed/: ccd_smiles.csv
(+9 files in other folders)
